# yaml_notes

./: 404.html  README.md  example_yaml_file.yaml  index.html  mkdocs.yml  pyproject.toml  search.html  sitemap.xml
docs/: example_yaml_file.yaml  index.md  mappings.ipynb  miscellaneous.ipynb  scalars.ipynb  sequences.ipynb  syntax_and_structure.ipynb
mappings/: index.html
miscellaneous/: index.html
scalars/: index.html
search/: search_index.json
sequences/: index.html
syntax_and_structure/: index.html
yaml_notes/data_types/: data.yaml  notes.md
yaml_notes/date_time/: data.yaml  notes.md
yaml_notes/strings/: data.yaml  notes.md
