[project]
name = "yaml_notes"
version = "0.0.1"
description = "this project stores yaml notes"
license = { text = "LICENSE" }
readme = "README.md"
requires-python = ">=3.9"
authors = [{ name = "chaitu-ycr", email = "chaitu.ycr@gmail.com" }]
keywords = ["yaml", "yml", "notes"]
package-mode = false
dynamic = [ "dependencies" ]

[project.urls]
homepage = "https://github.com/chaitu-ycr/yaml_notes.git"
repository = "https://github.com/chaitu-ycr/yaml_notes.git"
documentation = "https://chaitu-ycr.github.io/yaml_notes/"

[tool.poetry.dependencies]
python = ">=3.9"
ipykernel = "*"
pyyaml = "*"
ruamel-yaml = "*"
mkdocs-material = "*"
mkdocs-jupyter = "*"
mkdocs-include-markdown-plugin = "*"
mkdocstrings-python = "*"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
